--- a/main.css
+++ b/main.css
@@ -26,6 +26,7 @@ button {
 
     color: #ff796b;
     font-size: 24px;
+    line-height: 28px;
     font-family: 'ProximaNova', sans-serif;
 
     background-color: white;
